# plawnekjx-core

./: README.md  meson.build  meson.options
.github/workflows/: ci.yml
compat/: build.py  meson.build
inject/: inject-glue.c  inject-glue.h  inject.vala  meson.build  plawnekjx-inject.xcent
lib/agent/: agent-glue.c  agent.vala  meson.build  plawnekjx-agent-android.version  plawnekjx-agent-x86.symbols  plawnekjx-agent.def  plawnekjx-agent.symbols  plawnekjx-agent.version
lib/base/: buffer-glue.c  buffer.vala  channel.vala  corefoundation.vala  dbus.vala  fs.vala  linux-syscall.h  linux-system.vapi  linux.vala  meson.build  p2p-glue.c  p2p.vala  plawnekjx-darwin.c  plawnekjx-darwin.h  plawnekjx-tvos.h  posix.vala  promise.vala  rpc.vala  service.vala  session-glue.c  session.vala  socket-glue.c  socket.vala  stream.vala  value.vala  windows.vala  xpc.vala
lib/gadget/: gadget-darwin.m  gadget-glue.c  gadget.vala  meson.build  plawnekjx-gadget.def
lib/netif/: meson.build  tunnel-interface-observer.vala
lib/payload/: base-agent-session.vala  cloak.vala  exit-monitor.vala  fd-guard.vala  fdt-padder.vala  fork-monitor.vala  libc-shim.c  libc-shim.h  libc-shim.vapi  meson.build  portal-client.vala  process-glue.c  process.vala  script-engine.vala  spawn-monitor-glue.c  spawn-monitor.vala  syscall-linux-arm.S  syscall-linux-arm64.S  syscall-linux-mips.S  syscall-linux-x86.S  syscall-linux-x86_64.S  syscall-linux.h  thread-suspend-monitor-glue.c  thread-suspend-monitor.vala  unwind-sitter-glue.c  unwind-sitter.vala
lib/pipe/: meson.build  pipe-darwin.c  pipe-glue.h  pipe-sddl.c  pipe-sddl.h  pipe-unix.c  pipe-windows.c  pipe.vala
lib/selinux/: meson.build  patch.c  plawnekjx-selinux.h
portal/: meson.build  portal.vala
server/: meson.build  plawnekjx-server.plist  plawnekjx-server.xcent  server-darwin.h  server-darwin.m  server-glue.c  server-glue.h  server-ios-tvos.c  server-ios-tvos.h  server.vala
src/: agent-container.vala  agent.resources  async-task.vala  control-service.vala  embed-agent.py  embed-helper.py  file-monitor.vala  gdb.vala  helper.resources  host-session-service.vala  meson.build  package-manager.vala  plawnekjx-glue.c  plawnekjx.vala  portal-service.vala  system.vala
src/api/: generate.py  meson.build
src/barebone/: agent-connection.vala  allocator.vala  barebone-host-session.vala  barebone.resources  c-module.vala  callback.vala  config.vala  console.vala  elf.vala  img4.vala  interceptor.vala  layout.vala  lzfse.vala  machine.vala  memory-scanner.vala  meson.build  package-lock.json  package.json  qmp-client.vala  rust-module.vala  script.vala
src/compiler/: backend-glue.c  backend.go  backend.version  build-backend.py  compiler.resources  compiler.vala  go.mod  go.sum  meson.build  package-lock.json  package.json  shims.go  tscompiler.go  tsconfig.go
src/darwin/: darwin-host-session-glue.m  darwin-host-session.vala  fruitjector.vala  icon-helpers.h  icon-helpers.m  plawnekjx-darwin.resources  plawnekjx-helper-backend-glue.m  plawnekjx-helper-backend.vala  plawnekjx-helper-null-backend.vala  plawnekjx-helper-process.vala  plawnekjx-helper-service-glue.h  plawnekjx-helper-service-glue.m  plawnekjx-helper-service.vala  plawnekjx-helper-types.vala  plawnekjx-helper.plist  plawnekjx-helper.xcent  policy-softener-glue.c  policy-softener.vala  policyd-client.c  policyd-client.h  policyd-server.c  policyd-server.h  policyd.c  policyd.defs  policyd.h  springboard.h  springboard.m  substituted-client.h  substituted2-client.h  system-darwin.m
src/devkit/: meson.build
src/droidy/: axml.vala  droidy-client.vala  droidy-host-session.vala  injector.vala  jdwp.vala
src/freebsd/: binjector-glue.c  binjector.vala  freebsd-host-session.vala  system-freebsd.c
src/fruity/: debugger-mappings.vala  device-monitor-darwin.m  device-monitor-linux.vala  device-monitor-macos.vala  device-monitor-unix.c  device-monitor-windows.c  device-monitor-windows.vala  device-monitor.vala  dns.vala  dtx.vala  fruity-host-session.vala  injector.vala  installation-proxy.vala  keyed-archive.vala  lldb.vala  lockdown.vala  ncm.vala  network-stack.vala  opack.vala  plist-service.vala  plist.vala  springboard-services.vala  usb.vala  usbmux.vala  xpc.vala
src/linux/: linjector-glue.c  linjector.vala  linux-host-session.vala  plawnekjx-android.resources  plawnekjx-helper-backend-glue.c  plawnekjx-helper-backend-types.c  plawnekjx-helper-backend.resources  plawnekjx-helper-backend.vala  plawnekjx-helper-process.vala  plawnekjx-helper-service.vala  plawnekjx-helper-types.vala  supersu.vala  system-linux.c
src/qnx/: qinjector-glue.c  qinjector.vala  qnx-host-session.vala  system-qnx.c
src/simmy/: plawnekjx-simmy.resources  simmy-host-session-glue.m  simmy-host-session.vala  text-plist.vala
src/socket/: socket-host-session.vala
src/windows/: access-helpers.c  access-helpers.h  icon-helpers.c  icon-helpers.h  plawnekjx-helper-backend-glue.c  plawnekjx-helper-backend.vala  plawnekjx-helper-process-glue.c  plawnekjx-helper-process-glue.h  (+11 more)
subprojects/: brotli.wrap  libgee.wrap  libnice.wrap  libusb.wrap  lwip.wrap  lzfse.wrap  ngtcp2.wrap  openssl.wrap  selinux.wrap  termux-elf-cleaner.wrap  usrsctp.wrap
tests/: async-harness.vala  labrats.vala  main.vala  meson.build  plawnekjx-tests.plist  plawnekjx-tests.xcent  process-resource-usage.c  process-unix.c  process-windows.c  process.vala  profile-compiler.sh  run-android.sh  run-ios.sh  run-linux-vm.sh  run-linux-x86_64.sh  run-macos.sh  runner-glue.c  runner.vala  test-agent-glue.c  test-agent.vala  test-compiler.vala  test-gadget.vala  test-host-session-darwin-glue.m  test-host-session.vala  test-injector.vala  test-system.vala  vm.py
tests/labrats/: Makefile.android-arm.mk  Makefile.android-arm64.mk  Makefile.android-x86.mk  Makefile.android-x86_64.mk  Makefile.qnx.mk  agent.def  rebuild.sh  resident-agent.c  simple-agent.c
tests/pipe/: main.c
tools/: detect-version.py  meson.build  package-server-fruity.sh  post-process.py  resource-compiler.vala  symbolicate.py
vapi/: config.vapi  darwin-gcd.vapi  darwin-xpc.vapi
(+47 files in other folders)
